--- a/style.css
+++ b/style.css
@@ -1,5 +1,139 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+}
+
+body {
+	color: white;
+	background-color: black;
+	position: relative;
+	overflow: hidden;
+}
+
+ul > li {
+	list-style: none;
+}
+
+.setting-icon {
+	width: 60px;
+}
+
+.swoopt-icon {
+	padding: 10px;
+	gap: 10px;
+	display: flex;
+	align-items: center;
+	top: 0;
+	right: 0;
+	position: absolute;
+    margin-right: 40px;
+}
+
+.swoopt-icon img {
+	width: 50px;
+}
+
+.pages {
+	width: 100vw;
+	height: 100vh;
+	overflow: scroll;
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+}
+
+.pages > * {
+    overflow: auto;
+	position: relative;
+	flex: none;
+	padding: 50px;
+	width: 100vw;
+	height: 100vh;
+}
+
+.big {
+	font-size: 2em;
+}
+
+.page-1, .page-7 {
+	text-align: center;
+	gap: 30px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+}
+
+.page-1 .content p, .page-7 .content p {
+	margin: 30px 0;
+}
+
+.page-2 {
+	position: relative;
+}
+
+.page-2 img {
+	margin: 15px;
+	width: 50px;
+}
+
+ol li {
+	margin: 20px 0;
+}
+
+.page-3 .swoopt-app-icon img {
+	width: 70px;
+	padding: 10px;
+	border: 1px solid white;
+	border-radius: 5px;
+    margin: 0px;
+}
+.page-3 .swoopt-app-icon {
+	gap: 10px;
+	margin: 30px 10px;
+	display: inline-flex;
+	align-items: center;
+	flex-direction: column;
+}
+
+.page-5 li p {
+	margin-top: 10px;
+	line-height: 35px;
+}
+
+.wrapper {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.wrapper img {
+    width: 15vw;
+}
+
+li img {
+	margin: 30px 10px;
+}
+
+nav {
+	position: absolute;
+	bottom: 40px;
+	left: 50%;
+	translate: -50% -50%;
+}
+
+nav ul {
+	display: flex;
+	justify-content: space-between;
+	width: 90vw;
+}
+
+button {
+	padding: 10px 20px;
+	background-color: yellow;
+}
+
+ol {
+	margin: 20px;
 }
