--- a/style.css
+++ b/style.css
@@ -1,7 +1,17 @@
+html {
+    scroll-behavior: smooth;
+}
+
 * {
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
+    font-family: Poppins;
+}
+
+a {
+    color: black;
+    text-decoration: none;
 }
 
 body {
@@ -20,6 +30,8 @@ ul > li {
 }
 
 .swoopt-icon {
+    font-weight: 500;
+    font-size: 2em;
 	padding: 10px;
 	gap: 10px;
 	display: flex;
@@ -37,7 +49,6 @@ ul > li {
 .pages {
 	width: 100vw;
 	height: 100vh;
-	overflow: scroll;
 	display: flex;
 	justify-content: flex-start;
 	align-items: center;
@@ -118,7 +129,7 @@ li img {
 
 nav {
 	position: absolute;
-	bottom: 40px;
+	bottom: 10px;
 	left: 50%;
 	translate: -50% -50%;
 }
@@ -129,8 +140,10 @@ nav ul {
 	width: 90vw;
 }
 
-button {
-	padding: 10px 20px;
+.button {
+    border: none;
+    user-select: none;
+	padding: 12px 25px;
 	background-color: yellow;
 }
 
